# Songbook

./: .gitignore  README.md  Readme.md  Songbook.spec  dlg_about.py  dlg_add_categories.py  dlg_add_genres.py  dlg_add_songs.py  dlg_edit_categories.py  dlg_edit_genres.py  dlg_edit_songs.py  main.py  main_ui.py  main_ui.ui  pyproject.toml  res.qrc  res_rc.py  version.txt
gui/: dlg_about_ui.py  dlg_about_ui.ui  dlg_add_categories_ui.py  dlg_add_categories_ui.ui  dlg_add_genres_ui.py  dlg_add_genres_ui.ui  dlg_add_songs_ui.py  dlg_add_songs_ui.ui  dlg_edit_categories_ui.py  dlg_edit_categories_ui.ui  dlg_edit_genres_ui.py  dlg_edit_genres_ui.ui  dlg_edit_songs_ui.py  dlg_edit_songs_ui.ui  main_ui.py  main_ui.ui
my_classes/: songbook.py  songs.py
