[tool.poetry]
name = "Songbook"
version = "0.1.0"
description = "Catalog of songs (songbook)"
authors = ["alkostuchkov <alkostuchkov@gmail.com>"]
license = "GPL"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pyside6 = "~6.7.2"
pyinstaller = "^6.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
